--- a/resume_temp.tex
+++ b/resume_temp.tex
@@ -27,35 +27,40 @@
 \begin{school}{Carnegie Mellon University}{2004 \textemdash 2008}{BS Economics}{}{Minor Physics}{}
 \end{school}
 
+\vspace*{-0.9em}
+
+\section{LANGUAGES \& SOFTWARE}
+\WorkFont \small Python\ \ • \ \ numpy  \ \ • \ \ github \ \ • \ \   HTML5 \ \ • \ \ CSS3 \ \ • \ \ \LaTeX \ \ %• \ 
+\\ MatLab\ \ • \ \ LabVIEW  • \ \ Mathamatica   \ \ • \ \  Photoshop\ \ • \ \ VIM
+
 \section{RESEARCH \& WORK}
 
 \begin{work}{Ground-based Plasma Space Physics }{2013  \textemdash \ \ 2015}{Prof. James LaBelle, Dartmouth College }
-\item{Create code with Python to calibrate data off reference signal}
-\item{Model ray tracing to determine physical characteristics of hiss events}
-\item{Use stistical and anlyitical methods to characterize hiss events}
-\item{Use Matlab to create plots and quanitfy hiss events}
-\item{Work on machinelarning to automaticly identify events of interest}
+\item{Created code with Python to calibrate data from reference signal}
+\item{Filtered over 100 Gb of data to identify signals}
+\item{Characterized hiss event signals using power threshhold}
+\item{Visualized power spectra using Matlab}
+\item{Modeled ray tracing to determine physical characteristics of signals}
 \end{work}
 
 \begin{work}{Material Physics}{2011  \textemdash \ \ 2013}{Dr. ChongLin Chen, UTSA Physics}
-\item{Use DC and RF sputtering to create Ni and Co samples on glass substrates}
-\item{Create and troubleshoot LabVIEW code measuring resistance with AC/DC resistive bridges}
-\item{\normalsize Acquire resistance data for samples over temperature, time, and environment}
-\item{Design and build custom heater to measure thermoelectric properties across a gradient}
+\item{Used DC/RF sputtering to create Ni and Co samples on glass substrates}
+\item{Wrote LabVIEW code to measure resistance with AC/DC resistive bridges}
+\item{\normalsize Acquired sample resistance over temperature, time, and environment}
+\item{Designed and built a custom heater to measure thermoelectric properties across a sample with an applied temperature gradient}
 \end{work}
 
 \begin{work}{Condensed Matter Modeling}{2011  \textemdash \ \ 2013}{Dr. Zlatko Koinov, UTSA Physics}
-\item{Use DC and RF sputtering to create Ni and Co samples on glass substrates}
-\item{Create and troubleshoot LabVIEW code measuring resistance with AC/DC resistive bridges}
-\item{ Acquire resistance data for samples over temperature, time, and environment}
-\item{Design and build custom heater to measure thermoelectric properties across a gradient}
+\item{Automated computations using Mathematica to create phase diagrams for a theoretical two–species mixture loaded in 2–D optical lattice}
+\item{Created an algorithm to iterate parameters, initial conditions, and save data efficiently}
 \end{work}
 
 \section*{Teaching}
 \begin{work}{Teacher's Assistent}{2013  \textemdash \ \ 2014}{Dartmouth College}
-\item{Graiding}
-\item{Leading lab and comunicating}
-\item{Helping with home work}
+\item{Promoted students' critical thinking by asking leading questions in lab}
+\item{Helped students step through problem solving with progressively more complicated examples}
+\item{Provided detailed feedback on students' assignments and lab work}
+\item{Responsibilities: Instructing laboratory sections, holding office hours, grading lab reports and homeworks}
 \end{work}
 
 \begin{work}{Pennsylvania Governors School for the Sciences}{July 2007}{Physics TA/Counselor}
@@ -65,14 +70,22 @@
 \item{Encouraged intellectual thinking and social interaction between students}
 \end{work}
 
+\section{Extracurricular}
+\begin{work}{Society of Physics Students Chapter 7272}{2012}{Treasurer}
+\item{Managed chapter bank account, spending, and income from fundraisers}
+\item{Implemented and trained members to use new credit card system for fundraising payments}
+\item{Increased chapter revenue by 800\%}
+\end{work}
 
-\section{LANGUAGES \& SOFTWARE}
-\WorkFont \small Python\ \ • \ \ numpy \ \ • \ \ scipy  \ \ • \ \ git\ \ • \ \   HTML5 \ \ • \ \ CSS3 \ \ • \ \ \LaTeX \ \ %• \ 
-\\ MatLab\ \ • \ \ LabVIEW  • \ \ Mathamatic   \ \ • \ \  Photoshop
+\begin{work}{JHE Photography}{2010}{Co-Founder}
+\item{Developed business model outlining revenues and expenses, mitigating risk}
+\item{Effectively implemented mobile system for on-site photography}
+\item{Negotiated contracts for use of convention space}
+\end{work}
 
 
 \section{HOBBIES}
-WoodWorking  \hfill{} LetterPress \hfill{} Tae Kwon Do \hfill Web Design
+Wood Working  \hfill{} Letter Press \hfill{} Tae Kwon Do \hfill Web Design
 
 
 \end{document}
