--- a/resume_temp.tex
+++ b/resume_temp.tex
@@ -4,8 +4,8 @@
 \setname{Howard}{Kim}
 %\title{something}{some city}{USA}
 \address{23 Drake Lane}{West Lebanon, NH}{US}
-\mobile{210.385.0589}
-\email{howardfk @ gmail.com}
+\mobile{412.474.4744}
+\email{hok @ gmail.com}
 \homepage{http://www.dartmouth.edu/~howardkim}{www.dartmouth.edu/\textasciitilde howardkim} % 
 % Sections Educatoin, work experince, skills, programing languges, ect
 % sub sections, date ranges
